# text-to-video

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  download_models.py  pyproject.toml
backend/: main.py
backend/api/routes/: jobs.py  videos.py
backend/api/websocket/: manager.py
backend/core/: config.py  models.py
backend/schemas/: job.py
backend/services/: job_service.py  llm_service.py  video_service.py
frontend/: Dockerfile  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts  jobs.ts
frontend/src/components/: ProgressBar.tsx  PromptInput.tsx  StatusBadge.tsx  VideoPlayer.tsx
frontend/src/hooks/: useJobWebSocket.ts  useVideoJob.ts
frontend/src/types/: job.ts
