[project]
name = "text-to-video"
version = "0.1.0"
description = "Text-to-video generation app using AnimateDiff — runs on CUDA, Apple Silicon (MPS), or CPU"
requires-python = ">=3.11"
dependencies = [
    # Web framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "python-multipart>=0.0.12",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "websockets>=13.0",
    # ML — PyTorch (CUDA, MPS, or CPU; install the right wheel for your platform)
    "torch>=2.4.0",
    "torchvision>=0.19.0",
    "diffusers>=0.30.0",
    "transformers>=4.45.0",
    "accelerate>=1.0.0",
    "safetensors>=0.4.5",
    # Video / image output
    "imageio>=2.35.0",
    "imageio-ffmpeg>=0.5.1",
    "Pillow>=10.4.0",
    "numpy>=1.26.0",
]

# Apple Silicon: install with `uv sync --extra apple-silicon`
[project.optional-dependencies]
apple-silicon = [
    "mlx>=0.19.0",
    "mlx-lm>=0.19.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["backend"]

[dependency-groups]
dev = [
    "ruff>=0.7.0",
    "pytest>=8.3.0",
    "httpx>=0.27.0",
]
